# mqtt-locust-on-azure

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: cd.yaml  ci.yaml  deploy_consumer.yaml  nightly.yaml  run_azure.yaml  run_azure_k8s.yaml
charts/locust/: Chart.yaml  values.yaml
charts/locust/templates/: _helpers.tpl  consumer-pod.yaml  container-registry.yaml  master-pod.yaml  master-service.yaml  workers-job.yaml
consumer/: Dockerfile  main.py  requirements.txt  utils.py
grafana/: dashboard.json
producer/: .dockerignore  Dockerfile  locustfile.py  mqtt_user.py  requirements.txt
