[project]
name = "MQTT Locust on Azure"
repository = "https://github.com/joan-mido-qa/mqtt-locust-on-azure"
authors = [
    "Joan Flotats"
]


[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "RSE", # flake8-raise
    "SIM", # flake8-simplify
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "Q", # flake8-quotes
    "INP", # flake8-no-pep-420
    "PT", # flake8-pytest-style
    "RUF" # ruff rules
]
ignore = [
    "E501", # line too long, handled by black
    "B905",
    "B020",
    "B024",
    "B027",
    "C901",
    "SIM117",
    "SIM114",
    "SIM103",
    "SIM102",
    "PT004",
    "PT011",
    "PT012",
    "PT017"
]

[tool.black]
line-length = 120

[tool.mypy]
exclude = ['venv']
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = false
