[metadata]
name = MQTT Locust on Azure
version = 0.0.1
url = https://github.com/joan-mido-qa/mqtt-locust-on-azure
author = Joan Flotats

[flake8]
max-line-length = 88
select = W,B,F,E711,E712,E901
extend-ignore = E203,B005,F401,F811,F821,F403,F405,B008
exclude = .git,.eggs,__pycache__,build,dist,venv
max-complexity = 11

[mypy]
exclude = ['venv']
python_version = 3.10
ignore_missing_imports = True
show_error_codes = True
disallow_untyped_defs = True
no_implicit_optional = True
check_untyped_defs = True
warn_return_any = True
warn_unused_ignores = False
