[metadata]
name = MQTT Locust on Azure
version = 0.0.1
url = https://github.com/joan-mido-qa/mqtt-locust-on-azure
author = Joan Flotats

[mypy]
exclude = ['venv']
python_version = 3.10
ignore_missing_imports = True
show_error_codes = True
disallow_untyped_defs = True
no_implicit_optional = True
check_untyped_defs = True
warn_return_any = True
warn_unused_ignores = False
